fix z-index on bar

--- a/portfolio-site/styles.css
+++ b/portfolio-site/styles.css
@@ -731,7 +731,7 @@ header.scrolled .sticky-bar {
   top: 0;
   display: flex;
   align-items: center;
-
+  z-index: 5;
   transition: all 250ms ease-in-out;
 }
 
